[package]
name = "winreader"
version = "0.1.0"
edition = "2021"
authors = ["Lucas Mazuco <sigmw@protonmail.com"]
repository = "https://github.com/sigmw/winreader"
license-file = "LICENSE.md"
keywords = ["memory", "windows"]
description = "A process memory reader for Windows"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4" }
winapi = { version = "0.3.9", features = ["winuser", "memoryapi", "handleapi", "processthreadsapi", "psapi", "errhandlingapi"] }
