[package]
name = "winreader"
version = "1.0.0"
edition = "2021"
authors = ["Lucas Mazuco <sigmw@protonmail.com"]
repository = "https://github.com/sigmw/winreader"
license-file = "LICENSE.md"
keywords = ["memory", "windows"]
description = "A process memory reader for Windows"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
clap = { version = "4.1.4" }
windows-sys = { version = "0.45.0", features = ["Win32_System_Memory", "Win32_Foundation", "Win32_System_Threading", "Win32_System_ProcessStatus", "Win32_System_Kernel", "Win32_System_Diagnostics_Debug", "Win32_System_Diagnostics_ToolHelp"] }
